@@ -1,0 +1,9 @@
+i686: arch.o
+	
+
+arch.o:
+	$(MAKE) -C i686
+
+.phony: clean
+clean:
+	rm -rf *.o
