@@ -1,0 +1,2 @@
+hello:
+    jmp hello
