@@ -1,0 +1,4 @@
+#include <stdint.h>
+#include <stddef.h>
+
+void StackTrace(size_t Max_Frames);
