@@ -1,14 +1,14 @@
-#include <strace.h>
+#include <kernel/strace.h>
 
 struct stackframe {
-    struct *stackframe ebp;
+    struct stackframe *ebp;
     unsigned long long eip;
-}
+};
 
 void StackTrace(size_t Max_Frames)
 {
-    struct *stackframe frame;
-    __volatile__ __asm__("mov %%esp, %0"
+    struct stackframe *frame;
+    __asm__ __volatile__("mov %%esp, %0"
                         : "=a"(frame)
                         :);
     int i = 0;
